fixed declareCabo